advances on press

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -4,7 +4,8 @@
     "staking": "Staking",
     "legal": "Legal",
     "preguntas frecuentes": "Preguntas Frecuentes",
-    "contacto": "Contacto"
+    "contacto": "Contacto",
+    "noticias": "Noticias"
   },
   "header": {
     "bienvenido": "Bienvenido a Atómico3",
