--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -4,7 +4,8 @@
     "staking": "Staking",
     "legal": "Legal",
     "preguntas frecuentes": "Faq",
-    "contacto": "Contact"
+    "contacto": "Contact",
+    "noticias": "Press and Media"
   },
   "header": {
     "bienvenido": "Welcome to Atómico3",
@@ -20,16 +21,13 @@
     "continuar": "Continue",
     "cancelar": "Cancel",
     "completar formulario": "Complete form"
-    
   },
-  "popup":{
+  "popup": {
     "obten un 5 adicional": "Get an extra 5%!",
     "p1": "Buy AT3 (new) between 00:00 a.m. on Monday, September 23, 2024 and until 11:59 p.m. on September 30, 2024. From Atómico3 we are going to give you an additional 5%.",
     "p2": "Once you have made the purchase, do not forget to fill out the form with your information by clicking on the 'Happy Spring' button.",
     "aceptar": "Continue"
-
   },
-
   "atomicInfo": {
     "que es atomico": "What is Atómico3?",
     "descripcion atomico p1": " Atómico3 is a token that represents the tokenization of mining assets, backed by lithium reserves certified under ni 43-101 standards. This process digitizes lithium reserves, allowing them to be traded on blockchain platforms.",
@@ -121,8 +119,5 @@
     "Los pagos con el Token AT3 son definitivos p2": "YOU ARE RESPONSIBLE FOR VERIFYING THAT YOU HAVE ENTERED THE CORRECT AT3 TOKEN ADDRESS IN THE RECIPIENT FIELD AND THE CORRECT AT3 TOKEN PRICE IN THE AMOUNT FIELD IN YOUR DIGITAL WALLET SOFTWARE.",
     "Protocolos de la red Token AT3": "AT3 Token Network Protocols",
     "Protocolos de la red Token AT3 descripcion": "We do not own or control the underlying software protocols that govern the operation of the AT3 token network. The AT3 token network protocols are open source and may be used, copied, modified and distributed by anyone. We are not responsible for the operation of the AT3 token network protocols. The AT3 token network protocols are subject to sudden changes in operating rules (e.g., forks), and such changes may materially affect the value, function and/or even the name of the AT3 token."
-
-    
-
   }
 }
