--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -119,5 +119,8 @@
     "Los pagos con el Token AT3 son definitivos p2": "YOU ARE RESPONSIBLE FOR VERIFYING THAT YOU HAVE ENTERED THE CORRECT AT3 TOKEN ADDRESS IN THE RECIPIENT FIELD AND THE CORRECT AT3 TOKEN PRICE IN THE AMOUNT FIELD IN YOUR DIGITAL WALLET SOFTWARE.",
     "Protocolos de la red Token AT3": "AT3 Token Network Protocols",
     "Protocolos de la red Token AT3 descripcion": "We do not own or control the underlying software protocols that govern the operation of the AT3 token network. The AT3 token network protocols are open source and may be used, copied, modified and distributed by anyone. We are not responsible for the operation of the AT3 token network protocols. The AT3 token network protocols are subject to sudden changes in operating rules (e.g., forks), and such changes may materially affect the value, function and/or even the name of the AT3 token."
+  },
+  "noticias": {
+    "noticias": "Noticias"
   }
 }
