--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -121,6 +121,9 @@
     "Protocolos de la red Token AT3 descripcion": "We do not own or control the underlying software protocols that govern the operation of the AT3 token network. The AT3 token network protocols are open source and may be used, copied, modified and distributed by anyone. We are not responsible for the operation of the AT3 token network protocols. The AT3 token network protocols are subject to sudden changes in operating rules (e.g., forks), and such changes may materially affect the value, function and/or even the name of the AT3 token."
   },
   "noticias": {
-    "noticias": "Noticias"
+    "noticias": "Press and Media",
+    "n1": "Increase in the price of lithium boosts the Argentine Atómico3 cryptocurrency as a solid investment option",
+    "n2": "The valorization of lithium in Latin America: perspectives, projections and its impact on the global market",
+    "n3": "Atómico3, the Argentine cryptocurrency linked to lithium, reduces its emission to make it sustainable over time"
   }
 }
