--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -6,7 +6,9 @@
     "legal": "Legal",
     "preguntas frecuentes": "Faq",
     "contacto": "Contact",
-    "noticias": "Press and Media"
+    "noticias": "Press and Media",
+    "como invertir": "How to invest",
+    "feliz primavera": "Happy Spring!"
   },
   "header": {
     "bienvenido": "Welcome to Atómico3",
