--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -6,7 +6,9 @@
     "legal": "Legal",
     "preguntas frecuentes": "Preguntas Frecuentes",
     "contacto": "Contacto",
-    "noticias": "Noticias"
+    "noticias": "Noticias",
+    "como invertir": "Cómo invertir",
+    "feliz primavera": "¡Feliz Primavera!"
   },
   "header": {
     "bienvenido": "Bienvenido a Atómico3",
