--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -10,6 +10,16 @@
     "como invertir": "How to invest",
     "feliz primavera": "Happy Spring!"
   },
+  "nosotros": {
+    "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activities with an approach aimed at a tokenization tool for mining and related companies throughout the electromobility chain.",
+    "Nuestros Valores": "Our Core Values",
+    "Propósito": "Purpose",
+    "Propósito descripcion": "Commitment to sustainable growth and global economic development. Working to create a future where resources are managed responsibly and with a long-term vision, for the benefit of both investors and communities.",
+    "Visión": "Vision",
+    "Visión descripcion": "We want to revolutionize the way natural resources are managed and invested in through the application of advanced tokenization and blockchain technologies.",
+    "Misión": "Mission",
+    "Misión descripcion": "Improve the efficiency and transparency of the lithium market, open new opportunities for investors and contribute to global economic development."
+  },
   "header": {
     "bienvenido": "Welcome to Atómico3",
     "criptoactivo": "A crypto asset backed by lithium, promoting sustainability by reducing carbon emissions through tokenized incentives.",
