advances on nosotros

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -11,10 +11,11 @@
     "feliz primavera": "¡Feliz Primavera!"
   },
   "nosotros": {
-    "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de actividades mineras con un enfoque orientado a una herramienta de tokenización para las empresas mineras y relacionadas en toda la cadena de electromovilidad.",
+    "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
+    "title p1": "Al convertir las reservas de litio en tokens digitales, les facilitamos a la industria minera la financiación de su operatoria, contribuyendo al desarrollo de su actividad integral, y a la transición hacia un futuro más sostenible.",
     "Nuestros Valores": "Nuestros Valores",
     "Propósito": "Propósito",
-    "Propósito descripcion": "Compromiso con el crecimiento sostenible y el desarrollo económico global. Trabajar para crear un futuro donde los recursos se gestionen de manera responsable y con visión de largo plazo, en beneficio tanto de los inversores como de las comunidades.",
+    "Propósito descripcion": "Contribuir al desarrollo de la actividad minera de Latinoamérica mediante la tokenización de los activos mineros, colaborando en ser la herramienta financiera del desarrollo de la minería",
     "Visión": "Visión",
     "Visión descripcion": "Queremos revolucionar la manera en que se gestionan y se invierte en recursos naturales mediante la aplicación de tecnologías avanzadas de tokenización y blockchain.",
     "Misión": "Misión",
