traductions on about us done

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -11,12 +11,13 @@
     "feliz primavera": "Happy Spring!"
   },
   "nosotros": {
-    "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activities with an approach aimed at a tokenization tool for mining and related companies throughout the electromobility chain.",
+    "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
+    "title p1": "By converting lithium reserves into digital tokens, we make it easier for the mining industry to finance its operations, contributing to the development of its comprehensive activity, and the transition towards a more sustainable future.",
     "Nuestros Valores": "Our Core Values",
     "Propósito": "Purpose",
-    "Propósito descripcion": "Commitment to sustainable growth and global economic development. Working to create a future where resources are managed responsibly and with a long-term vision, for the benefit of both investors and communities.",
+    "Propósito descripcion": "Contribute to the development of mining activity in Latin America through the tokenization of mining assets, collaborating in being the financial tool for the development of mining.",
     "Visión": "Vision",
-    "Visión descripcion": "We want to revolutionize the way natural resources are managed and invested in through the application of advanced tokenization and blockchain technologies.",
+    "Visión descripcion": "We want to revolutionize the way natural resources are managed and invested by applying advanced tokenization and blockchain technologies.",
     "Misión": "Mission",
     "Misión descripcion": "Improve the efficiency and transparency of the lithium market, open new opportunities for investors and contribute to global economic development."
   },
