--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -15,7 +15,7 @@
     "title p1": "Al convertir las reservas de litio en tokens digitales, les facilitamos a la industria minera la financiación de su operatoria, contribuyendo al desarrollo de su actividad integral, y a la transición hacia un futuro más sostenible.",
     "Nuestros Valores": "Nuestros Valores",
     "Propósito": "Propósito",
-    "Propósito descripcion": "Contribuir al desarrollo de la actividad minera de Latinoamérica mediante la tokenización de los activos mineros, colaborando en ser la herramienta financiera del desarrollo de la minería",
+    "Propósito descripcion": "Contribuir al desarrollo de la actividad minera de Latinoamérica mediante la tokenización de los activos mineros, colaborando en ser la herramienta financiera del desarrollo de la minería.",
     "Visión": "Visión",
     "Visión descripcion": "Queremos revolucionar la manera en que se gestionan y se invierte en recursos naturales mediante la aplicación de tecnologías avanzadas de tokenización y blockchain.",
     "Misión": "Misión",
