advances on team

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -139,5 +139,16 @@
     "n1": "Increase in the price of lithium boosts the Argentine Atómico3 cryptocurrency as a solid investment option",
     "n2": "The valorization of lithium in Latin America: perspectives, projections and its impact on the global market",
     "n3": "Atómico3, the Argentine cryptocurrency linked to lithium, reduces its emission to make it sustainable over time"
+  },
+  "team":{
+
+  "nuestro equipo": "Nuestro Equipo",
+  "nuestro equipo descripcion": "At Atómico3, we have a team of passionate and visionary professionals committed to revolutionizing the cryptocurrency industry and the tokenization of natural resources. Our team combines expertise in blockchain technology, digital economy, and mining, working together to democratize access to lithium reserves and foster a sustainable energy transition.",
+  "ceo y fundador": "CEO & Founder",
+  "presidente": "President",
+  "director de finanzas": "Finance Director",
+  "Director de Prensa": "Press Director",
+  "Desarrollador Web3": "Web3 Developer",
+  "Desarrollador Web2": "Web2 Developer"
   }
 }
