--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -139,5 +139,15 @@
     "n1": "Aumento del precio del litio impulsa a la criptomoneda Argentina Atómico3 como opción de inversión sólida",
     "n2": "La valorización del litio en Latinoamérica: perspectivas, proyecciones y su impacto en el mercado global",
     "n3": "Atómico3, la criptomoneda argentina ligada al litio reduce su emisión para que sea sostenible en el tiempo"
+  },
+  "team":{
+    "nuestro equipo": "Nuestro Equipo",
+    "nuestro equipo descripcion": "En Atómico3, contamos con un equipo de profesionales apasionados y visionarios que están comprometidos con revolucionar la industria de las criptomonedas y la tokenización de recursos naturales. Nuestro equipo combina experiencia en tecnología blockchain, economía digital y minería, trabajando juntos para democratizar el acceso a las reservas de litio y fomentar una transición energética sostenible.",
+    "ceo y fundador": "Ceo & Fundador",
+    "presidente": "Presidente",
+    "director de finanzas": "Director de Finanzas",
+    "Director de Prensa": "Director de Prensa",
+    "Desarrollador Web3": "Desarrollador Web3",
+    "Desarrollador Web2": "Desarrollador Web2"
   }
 }
