--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -142,7 +142,7 @@
   },
   "team":{
 
-  "nuestro equipo": "Nuestro Equipo",
+  "nuestro equipo": "Our Team",
   "nuestro equipo descripcion": "At Atómico3, we have a team of passionate and visionary professionals committed to revolutionizing the cryptocurrency industry and the tokenization of natural resources. Our team combines expertise in blockchain technology, digital economy, and mining, working together to democratize access to lithium reserves and foster a sustainable energy transition.",
   "ceo y fundador": "CEO & Founder",
   "presidente": "President",
