menu Navbar added

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -8,7 +8,9 @@
     "contacto": "Contact",
     "noticias": "Press and Media",
     "como invertir": "How to invest",
-    "feliz primavera": "Happy Spring!"
+    "feliz primavera": "Happy Spring!",
+    "comprar at3": "Buy AT3",
+    "tutoriales": "Tutorials"
   },
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
