--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -8,7 +8,11 @@
     "contacto": "Contacto",
     "noticias": "Noticias",
     "como invertir": "Cómo invertir",
-    "feliz primavera": "¡Feliz Primavera!"
+    "feliz primavera": "¡Feliz Primavera!",
+    "comprar at3": "Comprar AT3",
+    "tutoriales": "Tutoriales"
+
+
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
