--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -43,7 +43,7 @@
   },
   "popup": {
     "obten un 5 adicional": "¡Obtén un 5% adicional!",
-    "p1": "Compra AT3 (nuevos) entre las 00:00hs del lunes 23 de setiembre de 2024 y hasta las 23:59 hs del día 30 de septiembre de 2024. Desde Atómico3 le vamos a regalar un 5% adicional.",
+    "p1": "¡Dadas las numerosas consultas y solicitudes hemos extendido la Spring Week hasta el 7 de Octubre! Compra AT3 (nuevos) entre las 00:00hs del lunes 23 de setiembre de 2024 y hasta las 23:59 hs del día 7 de Octubre de 2024. Desde Atómico3 le vamos a regalar un 5% adicional.",
     "p2": "Una vez realizada la compra no te olvides de llenar el formulario con tus datos cliqueando en el botón 'Feliz Primavera'",
     "aceptar": "Aceptar"
   },
