--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -154,5 +154,12 @@
     "Director de Prensa": "Director de Prensa",
     "Desarrollador Web3": "Desarrollador Web3",
     "Desarrollador Web2": "Desarrollador Web2"
+  },
+   "invertir":{
+    "como invertir": "¿Cómo Invertir en Atómico3?",
+    "como invertir p1": "En Atómico3 puedes invertir en 4 modalidades diferentes: Staking, Peer to Peer, Comprar AT3 o Feliz Primavera",
+    "como invertir p2": "Aquí te enseñaremos cómo realizar cada una de ellas ¡Cliquea en el botón de abajo!",
+    "ver tutoriales": "Ver Tutoriales"
+
   }
 }
