--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -163,6 +163,8 @@
 
   },
   "como invertir":{
-    "como invertir": "How to invest in Atómico3?"
+    "como invertir": "How to invest in Atómico3?",
+    "como invertir p1": "In this section you will find tutorials to learn the different ways to invest in Atómico3",
+    "como invertir p2": "Scroll down and start investing today!"
   }
 }
