--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -160,6 +160,10 @@
     "como invertir p1": "En Atómico3 puedes invertir en 4 modalidades diferentes: Staking, Peer to Peer, Comprar AT3 o Feliz Primavera",
     "como invertir p2": "Aquí te enseñaremos cómo realizar cada una de ellas ¡Cliquea en el botón de abajo!",
     "ver tutoriales": "Ver Tutoriales"
-
+  },
+  "como invertir": {
+    "como invertir": "¿Cómo Invertir en Atómico3?",
+     "como invertir p1": "En esta sección encontrarás tutoriales para aprender las diferentes maneras de invertir en Atómico3",
+    "como invertir p2": "¡Desliza hacia abajo y comienza a invertir hoy!"
   }
 }
