--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -164,6 +164,8 @@
   "como invertir": {
     "como invertir": "¿Cómo Invertir en Atómico3?",
      "como invertir p1": "En esta sección encontrarás tutoriales para aprender las diferentes maneras de invertir en Atómico3",
-    "como invertir p2": "¡Desliza hacia abajo y comienza a invertir hoy!"
+    "como invertir p2": "¡Desliza hacia abajo y comienza a invertir hoy!",
+    "conectar tu wallet": "Conectar tu Wallet"
   }
+  
 }
