--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -171,7 +171,17 @@
     "como invertir p2": "Scroll down and start investing today!",
     "conectar tu wallet": "Connect your Wallet!",
     "conectar tu wallet p1": " To perform the necessary operations to invest in Atómico3 it is essential that you have your wallet connected.",
-    "conectar tu wallet p2": "Watch the video below and learn how to do it!"
+    "conectar tu wallet p2": "Watch the video below and learn how to do it!",
+    "peer to peer": "What is Peer to Peer?",
+     "peer to peer p1": "Basically, Peer to Peer consists of exchanging USDT for AT3.",
+    "peer to peer p2": "Watch the video below and learn step by step how to do it!",
+    "peer to peer p3": "How to make Peer to Peer? ",
+    "peer to peer p4": "Learn quickly and easily how to do it by following the steps below! ",
+    "peer to peer p5": "Click on the video and start investing today! "
+
+
+
+
 
     
 
