--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -5,7 +5,7 @@
     "staking": "Staking",
     "legal": "Legal",
     "preguntas frecuentes": "Faq",
-    "contacto": "Contact",
+    "ayuda": "Help",
     "noticias": "Press and Media",
     "como invertir": "How to invest",
     "feliz primavera": "Happy Spring!",
