--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -5,7 +5,7 @@
     "staking": "Staking",
     "legal": "Legal",
     "preguntas frecuentes": "Preguntas Frecuentes",
-    "contacto": "Contacto",
+    "ayuda": "Ayuda",
     "noticias": "Noticias",
     "como invertir": "Cómo invertir",
     "feliz primavera": "¡Feliz Primavera!",
