--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -11,7 +11,8 @@
     "feliz primavera": "Happy Spring!",
     "comprar at3": "Buy AT3",
     "tutoriales": "Tutorials",
-    "soporte": "Support"
+    "soporte": "Support",
+    "contacto": "Contact"
 
   },
   "nosotros": {
