--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -11,7 +11,9 @@
     "feliz primavera": "¡Feliz Primavera!",
     "comprar at3": "Comprar AT3",
     "tutoriales": "Tutoriales",
-    "soporte": "Soporte"
+    "soporte": "Soporte",
+    "contacto": "Contacto"
+
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
