--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -179,12 +179,12 @@
     "peer to peer p3": "How to make Peer to Peer? ",
     "peer to peer p4": "Learn quickly and easily how to do it by following the steps below! ",
     "peer to peer p5": "Click on the video and start investing today! "
-
-
-
-
-
-    
-
+  },
+  "soporte": {
+    "soporte": "Support",
+    "soporte p1": "If you have any questions or concerns, don't hesitate to contact us, we're here to help you!",
+    "whatssap descripcion": "Contact us via WhatsApp for better service!",
+    "email descripcion": "You can also send us an email with your inquiries!",
+    "nuestra direccion": "Our address!"
   }
 }
