--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -12,7 +12,12 @@
     "comprar at3": "Buy AT3",
     "tutoriales": "Tutorials",
     "soporte": "Support",
-    "contacto": "Contact"
+    "contacto": "Contact",
+    "descargar Brochure": "Download Brochure",
+    "nuestro equipo": "Our Team",
+    "descargar brochure": "Download Brochure"
+
+    
 
   },
   "nosotros": {
