--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -12,7 +12,9 @@
     "comprar at3": "Comprar AT3",
     "tutoriales": "Tutoriales",
     "soporte": "Soporte",
-    "contacto": "Contacto"
+    "contacto": "Contacto",
+    "nuestro equipo": "Nuestro Equipo",
+    "descargar brochure": "Descargar Brochure"
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
