--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -15,7 +15,9 @@
     "contacto": "Contact",
     "descargar Brochure": "Download Brochure",
     "nuestro equipo": "Our Team",
-    "descargar brochure": "Download Brochure"
+    "descargar brochure": "Download Brochure",
+    "sobre atomico": "About Atómico3"
+
 
     
 
