--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -14,7 +14,8 @@
     "soporte": "Soporte",
     "contacto": "Contacto",
     "nuestro equipo": "Nuestro Equipo",
-    "descargar brochure": "Descargar Brochure"
+    "descargar brochure": "Descargar Brochure",
+    "sobre atomico": "Sobre Atómico3"
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
