--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -175,8 +175,9 @@
   },
   "como invertir":{
     "como invertir": "How to invest in Atómico3?",
-    "como invertir p1": "In this section you will find tutorials to learn the different ways to invest in Atómico3",
-    "como invertir p2": "Scroll down and start investing today!",
+    "como invertir p1": "In this section we are going to explain the different ways you can invest in our project today. Below you will find detailed information on each of them, the tutorial videos and step by step instructions on how to do it.",
+    "como invertir p2": "Remember that the first step is to connect your wallet, if you still don't know how to do it, check the tutorials.",
+    "como invertir p3": "Scroll down and start investing today!",
     "conectar tu wallet": "Connect your Wallet!",
     "conectar tu wallet p1": " To perform the necessary operations to invest in Atómico3 it is essential that you have your wallet connected.",
     "conectar tu wallet p2": "Watch the video below and learn how to do it!",
