--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -168,8 +168,9 @@
   },
   "como invertir": {
     "como invertir": "¿Cómo Invertir en Atómico3?",
-    "como invertir p1": "En esta sección encontrarás tutoriales para aprender las diferentes maneras de invertir en Atómico3",
-    "como invertir p2": "¡Desliza hacia abajo y comienza a invertir hoy!",
+    "como invertir p1": "En esta seccion te vamos a explicar las diferentes maneras que tenes hoy de invertir en nuestro proyecto. Debajo vas a encontrar la información detallada de cada una de ellas, los videos tutoriales y el paso a paso de como hacerlo.",
+    "como invertir p2": "Recuerda que el primer paso es conectar tu wallet, si todavía no sabes como hacerlo revisa los tutoriales.  ",
+    "como invertir p3": "¡Desliza hacia abajo y comienza a invertir hoy!",
     "conectar tu wallet": "Conectar tu Wallet",
     "conectar tu wallet p1": "Para realizar las operaciones necesarias para invertir en Atómico3 es imprescindible que tengas tu wallet conectada.",
     "conectar tu wallet p2": "¡Mira el video a continuación y aprende como hacerlo!",
