--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -175,8 +175,8 @@
     "conectar tu wallet p1": "Para realizar las operaciones necesarias para invertir en Atómico3 es imprescindible que tengas tu wallet conectada.",
     "conectar tu wallet p2": "¡Mira el video a continuación y aprende como hacerlo!",
     "peer to peer": "¿Qué es Peer to Peer?",
-    "peer to peer p1": "Básicamene el Peer to Peer consiste en intercambiar USDT por AT3.",
-    "peer to peer p2": "¡Mira el video que sigue debajo y aprende paso a paso como realizarlo!",
+    "peer to peer p1": "Es una compra de billetera a billetera en la que compras AT3 con USDT o USDC, directamente de tu billetera a la nuestra, con la cotización que está publicada en nuestra página.",
+    "peer to peer p2": "Recuerda que para esto necesitas conectar tu wallet. Si no sabes como hacerlo, deslizate hacia abajo para ver el tutorial",
     "peer to peer p3": "¿Cómo hacer Peer to Peer?",
     "peer to peer p4": "¡Aprende fácil y rápidamente como hacerlo siguiendo los pasos a continuación!",
     "peer to peer p5": "¡Dale click al video y empieza a invertir hoy!"
