--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -195,7 +195,7 @@
     "email descripcion": "You can also send us an email with your inquiries!",
     "nuestra direccion": "Our address!"
   },
-  "tutoriales:":{
+  "tutoriales": {
     "tutoriales": "Tutorials"
 
   }
