advances on navbar

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -16,7 +16,11 @@
     "descargar Brochure": "Download Brochure",
     "nuestro equipo": "Our Team",
     "descargar brochure": "Download Brochure",
-    "sobre atomico": "About Atómico3"
+    "sobre atomico": "About Atómico3",
+    "idiomas": "Languages",
+    "terms": "Terms and conditions",
+    "privacy": "Privacy policy"
+
 
 
     
