--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -6,7 +6,7 @@
     "legal": "Legal",
     "preguntas frecuentes": "Preguntas Frecuentes",
     "ayuda": "Ayuda",
-    "noticias": "Noticias",
+    "noticias": "Medios y Noticias",
     "como invertir": "Cómo invertir",
     "feliz primavera": "¡Feliz Primavera!",
     "comprar at3": "Comprar AT3",
@@ -15,7 +15,13 @@
     "contacto": "Contacto",
     "nuestro equipo": "Nuestro Equipo",
     "descargar brochure": "Descargar Brochure",
-    "sobre atomico": "Sobre Atómico3"
+    "sobre atomico": "Sobre Atómico3",
+    "idiomas": "Idiomas",
+    "terms": "Términos y condiciones",
+    "privacy": "Política de privacidad"
+
+
+
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
