--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -117,7 +117,9 @@
     "Preguntas Frecuentes": "FAQ",
     "Términos y Condiciones": "Terms and Conditions",
     "Política de privacidad": "Privacy Policy",
-    "todos los derechos reservados": "All rights reserved."
+    "todos los derechos reservados": "All rights reserved.",
+    "soporte": "Support"
+
   },
   "stakingView": {
     "¿Qué es el Staking?": "What is Staking?",
