--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -114,7 +114,8 @@
     "Preguntas Frecuentes": "Preguntas Frecuentes",
     "Términos y Condiciones": "Términos y Condiciones",
     "Política de privacidad": "Política de privacidad",
-    "todos los derechos reservados": "Todos los derechos reservados."
+    "todos los derechos reservados": "Todos los derechos reservados.",
+    "soporte": "Soporte"
   },
   "stakingView": {
     "¿Qué es el Staking?": "¿Qué es el Staking?",
